<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoreBoard 2019</string>
    <string name="games">ScoreBoard</string>
    <string name="login">Login</string>

    <string name="action_newGame">Nieuwe Wedstijd</string>
    <string name="action_publish">Publish</string>
    <string name="action_settings">Settings</string>
    <string name="action_redraw">Redraw</string>
    <string name="action_turnoff">Turn Off</string>
    <string name="action_about">Info</string>

    <string name="start_clock">Start Klok</string>
    <string name="stop_clock">Stop Klok</string>

    <string name="roomA">Zaal A</string>
    <string name="roomB">Zaal B</string>
    <string name="roomC">Zaal C</string>

    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticeren\u2026</string>
    <string name="ui_activity_create_new_game">Nieuwe Wedstrijd\u2026</string>
    <string name="ui_activity_start_new_game">Start Wedstrijd\u2026</string>

    <!-- AuthenticatorActivity -->
    <string name="label">Scorebord</string>

    <!-- Label above username EditText -->
    <string name="login_activity_username_label">Gebruiker</string>

    <!-- Label above password EditText -->
    <string name="login_activity_password_label">Paswoord</string>

    <!-- Button to sign in after entering username and password -->
    <string name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">Gebruikersnaam of paswoord is niet correct, probeer opnieuw.</string>

    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">Paswoord is verkeerd, probeer opnieuw.</string>

    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Gelieve paswoord in te geven.</string>

    <!-- Message shown if the provided account doesn't support the current activity. -->
    <string name="login_activity_newaccount_text">Log in</string>

    <string-array name="game_types">
        <item>Basket (10 min)</item>
        <item>Basket (4 min)</item>
        <item>Voetbal</item>
    </string-array>

    <string-array name="age_category">
        <item>Senioren</item>
        <item>Cooperatief</item>
        <item>U21 Junioren</item>
        <item>U18 Kadetten</item>
        <item>U16 Miniemen</item>
        <item>U14 Pupillen</item>
        <item>U12 Benjamins</item>
        <item>U10 Microben</item>
        <item>U8 Premicroben</item>
        <item>U5 Baby Basket</item>
    </string-array>

    <string-array name="minutes">
        <item>30 min</item>
        <item>25 min</item>
        <item>20 min</item>
        <item>15 min</item>
        <item>10 min</item>
        <item>5 min</item>
    </string-array>

    <string-array name="courts">
        <item>Zaal A</item>
        <item>Zaal B</item>
        <item>Zaal C</item>
    </string-array>

    <string name="oostkamp">KBBC Oostkamp</string>
    <string name="personal_fouls">Persoonlijke Fouten?</string>
    <string name="new_game_question">Wens je een nieuwe wedstrijd te starten?</string>
    <string name="cancel_txt">Cancel</string>
    <string name="ok_txt">Ok</string>
    <string name="bezoekers">Bezoekers</string>
    <string name="waarschuwing">Waarschuwing</string>
    <string name="zetWifiAan">Gelieve eerst de WIFI aan te zetten!</string>
    <string name="ok">Ok</string>
    <string name="verkeerdeWifi">Verkeerde WIFI hotspot gekozen, gelieve \'scorebord B\' te kiezen in tablet wifi menu</string>
    <string name="geenComms">Geen communicatie met scorebord op plein </string>
    <string name="herstart">Herstart scorebord of contacteer Jan De Clerck (0495/429553)</string>
    <string name="error">ERROR</string>
    <string name="home_team">Home team</string>
    <string name="negatief">Negatief</string>
    <string name="new_game">New</string>
    <string name="visitors_team">Visitors team</string>
    <string name="button">button</string>
    <string name="buzzer">buzzer</string>
    <string name="visitorstimeout">VisitorsTimeOut</string>
    <string name="hometimeout">HomeTimeOut</string>
    <string name="minustime">MinusTime</string>
    <string name="plustime">PlusTime</string>
    <string name="quarter">Quarter</string>
    <string name="clock">Clock</string>
    <string name="plusonevisitors">PlusOneVisitors</string>
    <string name="plusthreevisitors">PlusThreeVisitors</string>
    <string name="foulvisitors">FoulVisitors</string>
    <string name="plustwovisitors">PlusTwoVisitors</string>
    <string name="foulhome">FoulHome</string>
    <string name="plusthreehome">PlusThreeHome</string>
    <string name="plustwohome">PlusTwoHome</string>
    <string name="plusonehome">PlusOneHome</string>
    <string name="thuis_ploeg">Thuis Ploeg</string>
    <string name="wedstrijd_type">Wedstrijd Type</string>
    <string name="categorie">Categorie</string>
    <string name="start">Start</string>
    <string name="headerimage">headerImage</string>
    <string name="gebruiker">Gebruiker</string>
    <string name="ga_verder">Ga Verder</string>
    <string name="kies">Kies</string>
    <string name="software_door_stephan_janssen">Software door Stephan Janssen</string>
    <string name="electronica_door_jan_de_clerck">Electronica door Jan De Clerck</string>
    <string name="versie_6_sep_2017">versie 20 jan 2019</string>
    <string name="courtplan">courtPlan</string>
    <string name="start_aftelklok">Start Aftelklok</string>
    <string name="in_minuten">in minuten</string>
    <string name="start_wedstrijd">Start Wedstrijd</string>
    <string name="geef_naam_bezoekers">Geef naam bezoekers</string>
    <string name="geef_naam_thuis_ploeg">Geef naam thuis ploeg</string>
    <string name="gebruikersnaam">gebruikersnaam</string>
    <string name="paswoord">Paswoord</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="cancel">Cancel</string>
</resources>
