<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ImmersiveTheme">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="216dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/courtplan"
        android:src="@drawable/court_layout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_orange_light"
        android:minHeight="54dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="4dip">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dip"
            android:onClick="startLogin"
            android:text="@string/ga_verder"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <Spinner
        android:id="@+id/court"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_gravity="start|center_vertical"
        android:layout_marginTop="44dp"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/court"
        android:layout_gravity="end|center_vertical"
        android:layout_marginBottom="73dp"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:paddingStart="0dp"
        android:text="@string/software_door_stephan_janssen"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/court"
        android:layout_gravity="end|center_vertical"
        android:layout_marginBottom="99dp"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:paddingStart="0dp"
        android:text="@string/electronica_door_jan_de_clerck"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="121dp"
        android:layout_marginTop="100dp"
        android:text="@string/versie_nummer"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>
