<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    style="@style/AppTheme">

    <EditText
        android:id="@+id/teamA"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/teamB"
        android:layout_marginTop="13dp"
        android:hint="@string/geef_naam_thuis_ploeg"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <EditText
        android:id="@+id/teamB"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="87dp"
        android:hint="@string/geef_naam_bezoekers"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/gameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/teamA"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/ageCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/teamB"
        android:layout_alignStart="@+id/gameType"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_orange_light"
        android:minHeight="54dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="4dip">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="createNewGame"
            android:text="@string/start"
            android:textColor="@android:color/black" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamB"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>